<resources>
    <string name="app_name">Glucokid</string>
    <string name="title_registration">РЕГИСТРАЦИЯ</string>
    <string name="title_login">ВХОД</string>
    <string name="btn_register">Зарегистрироваться</string>
    <string name="btn_login">Войти</string>
    <string name="error_register">Ошибка регистрации</string>
    <string name="error_login">Ошибка входа</string>
    <string name="i_parent">Я родитель</string>
    <string name="i_child">Я ребёнок</string>
    <string name="hint_first_name">Имя</string>
    <string name="hint_last_name">Фамилия</string>
    <string name="hint_patronymic">Отчество</string>
    <string name="hint_email">Введите телефон</string>
    <string name="hint_phone">Номер телефона</string>
    <string name="hint_password">Придумайте пароль</string>
    <string name="hint_login_password">Введите пароль</string>
    <string name="hint_phone_child">Введите номер телефона ребёнка</string>
    <string name="enter_child_phone">Введите номер телефона ребёнка</string>
    <string name="enter_child_code">Введите код для привязки</string>
    <string name="btn_add_child">Добавить ребёнка</string>
    <string name="btn_save_data">Сохранить данные</string>
    <string name="btn_logout">Выйти из аккаунта</string>
    <string name="settings_profile">Настройки профиля</string>
    <string name="hint_sugar_level">Введи свой уровень сахара:</string>
    <string name="btn_submit">Отправить</string>
    <string name="msg_enter_value">Введите значение!</string>
    <string name="error_invalid_format">Неверный формат числа</string>
    <string name="placeholder_child_name">Имя Ребенка</string>
    <string name="status_loading">Данные загружаются</string>
    <string name="title_choose_pet">Выбери питомца</string>
    <string name="title_binding_code">Твой код для привязки</string>
    <string name="btn_generate">Сгенерировать</string>
    <string name="btn_parent_entered_code">Родитель ввел код</string>
    <string name="error_generation">Ошибка генерации кода</string>
</resources>