<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF495"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="1dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#FFA000" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/hint_last_name"
            app:layout_constraintTop_toBottomOf="@id/btnBack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_first_name"
            app:layout_constraintTop_toBottomOf="@id/inputLastName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputSecondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_patronymic"
            app:layout_constraintTop_toBottomOf="@id/inputFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSecondName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_phone"
            app:layout_constraintTop_toBottomOf="@id/inputSecondName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPhone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#F29100"
            android:text="@string/btn_save_data"
            android:textColor="@color/black"
            app:cornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/inputPhone" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#E53935"
            android:text="@string/btn_logout"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSave"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="20dp" />

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/btnUnlink"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="5dp"-->
<!--            android:backgroundTint="#E53935"-->
<!--            android:text="Отвязать ребенка"-->
<!--            android:textColor="@color/white"-->
<!--            app:cornerRadius="20dp"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/btnLogout"-->
<!--            tools:ignore="MissingConstraints"-->
<!--            tools:layout_editor_absoluteX="20dp" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>